--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
   </style>
 </head>
 
-<body class="bg-mainBackground text-white  h-screen flex items-center justify-center">
+<body class="flex-col bg-mainBackground text-white  h-screen flex items-center justify-center">
 
-  <div class="w-327 bg-cardBackground md:flex md:flex-row-reverse  md:gap-20 ">
+  <div class="w-327  bg-cardBackground md:flex md:flex-row-reverse  md:gap-20 ">
     <div class="bg-accent  block sm:hidden">
       <img src="images/image-header-mobile.jpg" alt="img" class="mix-blend-multiply">
     </div>
@@ -86,11 +86,11 @@
   </div>
 
 
-  <!--   
-    <div>
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Farhan</a>.
-    </div> -->
+
+  <div class="mt-32">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">famo</a>.
+  </div>
 </body>
 
 </html>
